Disable SquiggleCop for Common and update baselines

--- a/src/Common/Common.csproj
+++ b/src/Common/Common.csproj
@@ -19,6 +19,7 @@
     <AssemblyName>$(RootNamespace)</AssemblyName>
     <IsPackable>false</IsPackable>
     <IsPublishable>false</IsPublishable>
+    <SquiggleCop_Enabled>false</SquiggleCop_Enabled>
   </PropertyGroup>
 
   <PropertyGroup Label="Shared project settings">
