Reduce severity of S3267: Loops should be simplified with "LINQ" expressions (#272)
Reduce the severity of S3267: Loops should be simplified with "LINQ"
expressions

from a warning to a note / suggestion. This is a stylistic diagnostic
that often can suggest refactorings that are (at least subjectively)
worse than the code it's replacing. Leaving it as a note though so that
you still get the lightbulb so you can see what the refactoring would be
in case you like it better.

<!-- This is an auto-generated comment: release notes by coderabbit.ai
-->
## Summary by CodeRabbit

- **New Features**
- Introduced a new diagnostic severity level for code analysis, allowing
for more nuanced feedback on loop simplification using LINQ expressions.
- Added a new package source for local testing, enhancing the
development environment.

- **Bug Fixes**
- Updated severity levels for diagnostic rule S3267 to include both
error and note, enhancing clarity in reporting.

- **Documentation**
- Adjusted documentation for coding conventions to reflect the new
severity settings and maintain consistency in formatting rules.
<!-- end of auto-generated comment: release notes by coderabbit.ai -->

--- a/.editorconfig
+++ b/.editorconfig
@@ -135,6 +135,7 @@ csharp_style_prefer_range_operator = true:suggestion
 csharp_style_throw_expression = true:suggestion
 csharp_style_unused_value_assignment_preference = discard_variable:suggestion
 csharp_style_unused_value_expression_statement_preference = discard_variable:silent
+dotnet_diagnostic.S3267.severity = suggestion # S3267: Loops should be simplified with "LINQ" expressions
 
 # 'using' directive preferences
 csharp_using_directive_placement = outside_namespace:warning
