--- a/src/CodeFixes/Moq.CodeFixes.csproj
+++ b/src/CodeFixes/Moq.CodeFixes.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" PrivateAssets="all" />
+    <PackageReference Include="Microsoft.CodeAnalysis.AnalyzerUtilities" PrivateAssets="all" />
   </ItemGroup>
 
   <Import Project="$(RepoRoot)/src/Common/Common.projitems" Label="Shared" />
