Update release.yml to use Ubuntu package instead of Windows

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,7 +27,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           path: packages
-          pattern: packages-windows-*
+          pattern: packages-ubuntu-*
           merge-multiple: true
       - name: Publish NuGet package
         shell: pwsh
